--- a/index.html
+++ b/index.html
@@ -1,22 +1,34 @@
 <!doctype html>
-<html>
+<html lang="en">
 	<head>
+        <title> Maria's First Webpage</title>
+        <style>
+            #map {
+
+                height: 400px;
+                width: 100%;
+
+            }
+            </style>
+
+
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 
             <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
             <link rel="stylesheet" type="text/css" href="reset.css">
             <link rel="stylesheet" type="text/css" href="stylesheet.css">
             <link href="https://fonts.googleapis.com/css?family=Spectral+SC" rel="stylesheet">
-        <title> Maria's First Webpage</title>
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+
 	</head>
 
 	<body>
-    <h1>
-    <button onclick="myFunction()">Click Here</button>
-    <p id="demo"></p>
-    <script>
+        <h1>
+        <button onclick="myFunction()">Click Here</button>
+        <p id="demo"></p>
+        <script>
         function myFunction() {
             var txt;
             var person=prompt ("Please enter your name:");
@@ -31,24 +43,30 @@
     </h1>
     <header>
             <h1>Maria's First Webpage</h1>
-
                 <nav>
                     <ul>
                         <li> <a href="shipmanwebpage.html">About</a>
                         </li>
                     </ul>
                 </nav>
+        <ul>
+                        <li> Contact Information</li>
+                        <li> 555 New York Avenue</li>
+                        <li> New York, NY 10075</li>
+                        <li> 212-555-7777 (Main)</li>
+                    </ul>
+
     </header>
     <main>
     <div class="container-grid">
-        <div class="col-1">
+        <div class="col-lg">
             <h2>Welcome to my first webpage</h2>
         </div>
-        <div class="col-2">
+        <div class="col-sm">
         <img src="IMG_0013.png" alt="Self Bears drawing"
         width="250">
         </div>
-             <div class="col-3">
+             <div class="col-sm">
              <p>I am a novice at web development and interested to learn more about what the development stages entail.
                  I love developing new skills. </p>
              </div>
@@ -56,17 +74,70 @@
 
     </main>
         <footer>
-            <div class="col-4">
-            <div class="nav">
-                <h3>Sitemap</h3>
-                <ul>
-                    <li> <a href="shipmanwebpage.html">About</a>
-                    </li>
-                </ul>
-            </div>
-            </div>
-        </footer>
 
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand">Sitemap</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="shipmanwebpage.html">About</a>
+                        </li>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Dropdown link
+                            </a>
+                        </li>
+                    </ul>
+
+                </div>
+            </nav>
+
+            <div id ="map"></div>
+            <script>
+                function initMap() {
+                    var options = {
+                        zoom: 6,
+                        center:{lat:38.9072,lng:-77.0369}
+                    }
+                    var map = new
+                    google.maps.Map(document.getElementById('map'), options);
+
+                    var marker = new google.maps.Marker({
+                        position:{lat:40.7128,lng:-74.0060},
+                        map:map
+                    });
+                }
+            </script>
+            <script async defer
+                    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD74LBBTYtZK2f99NuHgaGo5z5bc-rLgvg&callback=initMap">
+            </script>
+            <!--<div id="map"></div>-->
+            <!--<script>-->
+                <!--function initMap(){-->
+                    <!--var location= {lat: -25.363, lng:131.044};-->
+                    <!--var map=new google.maps.Map(document.getElementById("map"),{-->
+                        <!--zoom: 4,-->
+                        <!--center: location-->
+                <!--});-->
+                    <!--var marker=new google.maps.Marker({-->
+                        <!--position: location, map: map-->
+                    <!--});-->
+                <!--}-->
+
+            <!--</script>-->
+<!--<script async defer src ="https://maps.googleapis.com/maps/api/js?key=AIzaSyD74LBBTYtZK2f99NuHgaGo5z5bc-rLgvg&callback=initMap"></script>-->
+            <!--</div>-->
+        </footer>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 	</body>
 
 
